Use <abbr> in Why Rust Appeals to Me

--- a/_posts/2015-08-08-why-rust.md
+++ b/_posts/2015-08-08-why-rust.md
@@ -31,7 +31,7 @@ that I was previously coding in
 Node.js and TypeScript (among others).
 
 - Easy to [install][install]
-- Easy to [uninstall][uninstall] (so very rare in the UNIX world)
+- Easy to [uninstall][uninstall] (so very rare in the <abbr>UNIX</abbr> world)
 - Reasonable [Hello, World!][hello]
 - Official build tool / package manager, [Cargo][cargo]
   - Low barrier to start a new project, `cargo new`
