Add discussion links to post data

--- a/_posts/2015-08-08-why-rust.md
+++ b/_posts/2015-08-08-why-rust.md
@@ -1,6 +1,9 @@
 ---
 layout: post
 title: Why Rust Appeals to Me
+discussions:
+  - site: Lobsters
+    href: https://lobste.rs/s/szxvj3/why_rust_appeals_to_me
 ---
 
 I started coding in [Rust][rust] this week,
