Add Lobsters discussion to Tetrasm 1

--- a/_posts/2015-09-11-tetrasm-1.md
+++ b/_posts/2015-09-11-tetrasm-1.md
@@ -1,5 +1,8 @@
 ---
 title: "Building a Tetris Clone in x86 Assembly, pt.&nbsp;Ⅰ: Hello, World"
+discussions:
+  - site: Lobsters
+    href: https://lobste.rs/s/jhvmig/building_a_tetris_clone_in_x86_assembly_pt_hello_world
 ---
 
 A couple months ago
