Add missing <code> to stack table in Tetrasm 1

--- a/_posts/2015-09-11-tetrasm-1.md
+++ b/_posts/2015-09-11-tetrasm-1.md
@@ -319,7 +319,7 @@ inside the body of `callee`.
   <tr>
     <td></td>
     <td><code>0x0FF4</code></td>
-    <td>Saved edx</td>
+    <td>Saved <code>edx</code></td>
   </tr>
   <tr>
     <td><code>ebp + 16</code></td>
