--- a/_posts/2015-09-11-tetrasm-1.md
+++ b/_posts/2015-09-11-tetrasm-1.md
@@ -3,6 +3,8 @@ title: "Building a Tetris Clone in x86 Assembly, pt.&nbsp;Ⅰ: Hello, World"
 discussions:
   - site: Lobsters
     href: https://lobste.rs/s/jhvmig/building_a_tetris_clone_in_x86_assembly_pt_hello_world
+  - site: Hacker News
+    href: https://news.ycombinator.com/item?id=10204160
 ---
 
 A couple months ago
