Add link to Tetrasm 2 in Tetrasm 1

--- a/_posts/2015-09-11-tetrasm-1.md
+++ b/_posts/2015-09-11-tetrasm-1.md
@@ -641,3 +641,7 @@ in assembly.
 Part two and more
 will come in the future,
 and links will go here.
+
+- [Part Ⅱ: I/O][pt2]
+
+[pt2]: {% post_url 2015-09-14-tetrasm-2 %}
