Add HN thread to Tetrasm 2

--- a/_posts/2015-09-14-tetrasm-2.md
+++ b/_posts/2015-09-14-tetrasm-2.md
@@ -1,5 +1,8 @@
 ---
 title: "Building a Tetris Clone in x86 Assembly, pt.&nbsp;Ⅱ: I/O"
+discussions:
+  - site: Hacker News
+    href: https://news.ycombinator.com/item?id=10219057
 ---
 
 By the end of
