Add series nav for Tetrasm posts

--- a/_posts/2015-09-11-tetrasm-1.md
+++ b/_posts/2015-09-11-tetrasm-1.md
@@ -1,5 +1,8 @@
 ---
 title: "Building a Tetris Clone in x86 Assembly, pt.&nbsp;Ⅰ: Hello, World"
+series: tetrasm
+part_title: "Part Ⅰ: Hello, World"
+
 discussions:
   - site: Lobsters
     href: https://lobste.rs/s/jhvmig/building_a_tetris_clone_in_x86_assembly_pt_hello_world
@@ -642,6 +645,4 @@ Part two and more
 will come in the future,
 and links will go here.
 
-- [Part Ⅱ: I/O][pt2]
-
-[pt2]: {% post_url 2015-09-14-tetrasm-2 %}
+{% include series-nav.html %}
