--- a/_posts/2015-09-14-tetrasm-2.md
+++ b/_posts/2015-09-14-tetrasm-2.md
@@ -1,5 +1,8 @@
 ---
 title: "Building a Tetris Clone in x86 Assembly, pt.&nbsp;Ⅱ: I/O"
+series: tetrasm
+part_title: "Part Ⅱ: I/O"
+
 discussions:
   - site: Hacker News
     href: https://news.ycombinator.com/item?id=10219057
@@ -388,3 +391,5 @@ to implement will be for timing.
 After that,
 it should be possible
 to start making the actual game.
+
+{% include series-nav.html %}
