Add Lobsters discussion to Tetrasm 2

--- a/_posts/2015-09-14-tetrasm-2.md
+++ b/_posts/2015-09-14-tetrasm-2.md
@@ -4,6 +4,8 @@ series: tetrasm
 part_title: "Part Ⅱ: I/O"
 
 discussions:
+  - site: Lobsters
+    href: https://lobste.rs/s/ry68is/building_a_tetris_clone_in_x86_assembly_pt_i_o
   - site: Hacker News
     href: https://news.ycombinator.com/item?id=10219057
 ---
