--- a/_posts/2015-09-27-ascii.md
+++ b/_posts/2015-09-27-ascii.md
@@ -1,5 +1,8 @@
 ---
 title: ASCII to My Heart
+discussions:
+  - site: Lobsters
+    href: https://lobste.rs/s/h2lgdi/ascii_to_my_heart_ascii_trivia
 ---
 
 The ASCII character encoding
@@ -63,7 +66,7 @@ many of the characters become obvious.
   the shifted symbol corresponding to the digit.
   This was based on the layouts of electric typewriters at the time,
   so doesn't hold up as much today.
-  It is still accurate for 1, 3, 4 and 5.
+  It is still accurate for 1, 3, 4 and 5 on US QWERTY layouts.
   For example, `0100011` is the character "#".
 
 - Values starting with `10`
