Fix footnote links for kramdown

--- a/_posts/2015-09-11-tetrasm-1.md
+++ b/_posts/2015-09-11-tetrasm-1.md
@@ -74,8 +74,7 @@ in the linker script.
 
 [multiboot]: https://www.gnu.org/software/grub/manual/multiboot/multiboot.html
 
-[^1]: [DB and Friends, NASM Manual]
-      (http://www.nasm.us/xdoc/2.11.08/html/nasmdoc3.html#section-3.2.1)
+[^1]: [DB and Friends, NASM Manual](http://www.nasm.us/xdoc/2.11.08/html/nasmdoc3.html#section-3.2.1)
 
 #### Linking
 
@@ -108,8 +107,7 @@ page-aligned.
 The first line also declares the entry-point of the kernel,
 a label named `boot`.
 
-[^2]: [OS image format, Multiboot Specification]
-      (https://www.gnu.org/software/grub/manual/multiboot/multiboot.html#OS-image-format)
+[^2]: [OS image format, Multiboot Specification](https://www.gnu.org/software/grub/manual/multiboot/multiboot.html#OS-image-format)
 
 #### Entry
 
@@ -179,14 +177,10 @@ not the correct way to reset an x86 CPU.
 But it works.
 More on that later.
 
-[^3]: [RESB and Friends, NASM Manual]
-      (http://www.nasm.us/xdoc/2.11.08/html/nasmdoc3.html#section-3.2.2)
-[^4]: [Any reason to do "xor eax, eax"?, Stack Overflow]
-      (http://stackoverflow.com/questions/1396527/any-reason-to-do-a-xor-eax-eax)
-[^5]: [FINIT/FNINIT, x86 Instruction Set Reference]
-      (http://x86.renejeschke.de/html/file_module_x86_id_97.html)
-[^6]: [HLT, x86 Instruction Set Reference]
-      (http://x86.renejeschke.de/html/file_module_x86_id_134.html)
+[^3]: [RESB and Friends, NASM Manual](http://www.nasm.us/xdoc/2.11.08/html/nasmdoc3.html#section-3.2.2)
+[^4]: [Any reason to do "xor eax, eax"?, Stack Overflow](http://stackoverflow.com/questions/1396527/any-reason-to-do-a-xor-eax-eax)
+[^5]: [FINIT/FNINIT, x86 Instruction Set Reference](http://x86.renejeschke.de/html/file_module_x86_id_97.html)
+[^6]: [HLT, x86 Instruction Set Reference](http://x86.renejeschke.de/html/file_module_x86_id_134.html)
 
 #### Hello, world?
 
@@ -490,10 +484,8 @@ It then uses the string operation `stosd`[^7]
 with `rep`[^8]
 to fill the entire screen.
 
-[^7]: [STOS/STOSB/STOSW/STOSD, x86 Instruction Set Reference]
-      (http://x86.renejeschke.de/html/file_module_x86_id_306.html)
-[^8]: [REP/REPE/REPZ/REPNE/REPNZ, x86 Instruction Set Reference]
-      (http://x86.renejeschke.de/html/file_module_x86_id_279.html)
+[^7]: [STOS/STOSB/STOSW/STOSD, x86 Instruction Set Reference](http://x86.renejeschke.de/html/file_module_x86_id_306.html)
+[^8]: [REP/REPE/REPZ/REPNE/REPNZ, x86 Instruction Set Reference](http://x86.renejeschke.de/html/file_module_x86_id_279.html)
 
 #### Hello, blank!
 
