--- a/_posts/2015-09-14-tetrasm-2.md
+++ b/_posts/2015-09-14-tetrasm-2.md
@@ -151,8 +151,7 @@ itoa:
   ret
 ```
 
-[^1]: [Calling convention, Building a Tetris Clone in x86 Assembly]
-      ({% post_url 2015-09-11-tetrasm-1 %}#calling-convention)
+[^1]: [Calling convention, Building a Tetris Clone in x86 Assembly]({% post_url 2015-09-11-tetrasm-1 %}#calling-convention)
 
 #### Algorithm
 
@@ -235,10 +234,8 @@ lea eax, [edi + 1]
 cld
 ```
 
-[^2]: [STD, x86 Instruction Set Reference]
-      (http://x86.renejeschke.de/html/file_module_x86_id_303.html)
-[^3]: [LOOP/LOOPcc, x86 Instruction Set Reference]
-      (http://x86.renejeschke.de/html/file_module_x86_id_161.html)
+[^2]: [STD, x86 Instruction Set Reference](http://x86.renejeschke.de/html/file_module_x86_id_303.html)
+[^3]: [LOOP/LOOPcc, x86 Instruction Set Reference](http://x86.renejeschke.de/html/file_module_x86_id_161.html)
 
 #### Hello, numbers
 
