--- a/_posts/2015-09-27-ascii.md
+++ b/_posts/2015-09-27-ascii.md
@@ -45,8 +45,7 @@ Hurray for lazy programmers!
 
 [chart]: /image/ascii.png
 
-[^1]: [ASCII Code Chart, Wikipedia]
-      (https://en.wikipedia.org/wiki/File:ASCII_Code_Chart-Quick_ref_card.png)
+[^1]: [ASCII Code Chart, Wikipedia](https://en.wikipedia.org/wiki/File:ASCII_Code_Chart-Quick_ref_card.png)
 
 ### ASCII for humans
 
