Add fbclock Lobsters link

--- a/_posts/2018-01-30-fbclock.md
+++ b/_posts/2018-01-30-fbclock.md
@@ -1,5 +1,8 @@
 ---
 title: Programming the Linux Framebuffer
+discussions:
+  - site: Lobsters
+    href: https://lobste.rs/s/gwpcqb/programming_linux_framebuffer
 ---
 
 [Previously][linux-console],
