Add fbclock HN link

--- a/_posts/2018-01-30-fbclock.md
+++ b/_posts/2018-01-30-fbclock.md
@@ -3,6 +3,8 @@ title: Programming the Linux Framebuffer
 discussions:
   - site: Lobsters
     href: https://lobste.rs/s/gwpcqb/programming_linux_framebuffer
+  - site: Hacker News
+    href: https://news.ycombinator.com/item?id=16277221
 ---
 
 [Previously][linux-console],
