Fix fbclock typos

--- a/_posts/2018-01-30-fbclock.md
+++ b/_posts/2018-01-30-fbclock.md
@@ -88,7 +88,7 @@ as `uint32_t *`:
     struct fb_var_screeninfo info;
     assert(0 == ioctl(fb, FBIOGET_VSCREENINFO, &info));
     size_t len = 4 * info.xres * info.yres;
-    uint32_t buf = mmap(NULL, len, PROT_READ | PROT_WRITE, MAP_SHARED, fb, 0);
+    uint32_t *buf = mmap(NULL, len, PROT_READ | PROT_WRITE, MAP_SHARED, fb, 0);
     assert(buf != MAP_FAILED);
 
 Placing a pixel is now as simple as
@@ -184,7 +184,7 @@ To make it more visually clear,
 we can add a simple border:
 
     uint32_t left = info.xres - header.width * len - 1;
-    uint32_f bottom = header.height;
+    uint32_t bottom = header.height;
     for (uint32_t y = 0; y < bottom; ++y) {
         buf[y * info.xres + left] = 0xFFFFFF;
     }
