Add link to fbatt

--- a/_posts/2018-01-30-fbclock.md
+++ b/_posts/2018-01-30-fbclock.md
@@ -216,6 +216,9 @@ which may appear
 as a new post
 in the future!
 
+Update: [battery charge indicator].
+
 [`strftime`]: http://man7.org/linux/man-pages/man3/strftime.3.html
 [full implementation]: https://github.com/programble/dotfiles/blob/master/bin/fbclock.c
 [modify]: /image/gpl.jpg
+[battery charge indicator]: https://github.com/programble/dotfiles/blob/master/bin/fbatt.c
